# logical_tui

./: Cargo.toml
src/: evaluate.rs  main.rs  truth_table_solver.rs
